<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/urprofile"
        android:layout_width="374dp"
        android:layout_height="24dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="22dp"
        android:text="@string/your_profile"
        app:layout_constraintBottom_toTopOf="@+id/urname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/urname"
        android:layout_width="373dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="8dp"
        android:text="@string/your_name"
        app:layout_constraintBottom_toTopOf="@+id/editname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urprofile" />

    <EditText
        android:id="@+id/editname"
        android:layout_width="382dp"
        android:layout_height="55dp"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editemail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urname"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editemail"
        android:layout_width="384dp"
        android:layout_height="53dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editname"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/WeatherForecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotoweather"
        android:text="Weather Forecast"
        app:layout_constraintBottom_toBottomOf="@id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotochat"
        android:text="@string/go_to_chat" />

    <Button
        android:id="@+id/toolButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="gotool"
        android:text="Go to ToolBar Page" />

    <ImageButton
        android:id="@+id/picButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:contentDescription="@string/todo" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="368dp"
        android:layout_height="35dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="451dp"
        android:text="@string/click_the_button_above_to_take_a_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>