<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WeatherForecast"
    android:layout_marginTop="27dp"
    android:layout_marginBottom="27dp"
    android:layout_marginLeft="48dp"
    android:layout_marginRight="48dp">



<ImageView
        android:id="@+id/ImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
/>
    <TextView
        android:id="@+id/Current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/current_temperature" />

    <TextView
        android:id="@+id/Min"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minimum_temperature" />

    <TextView
        android:id="@+id/Max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/max_temperature" />

    <TextView
        android:id="@+id/Uv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UV Rating" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        />

</LinearLayout>